<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_black" >

    <RelativeLayout
        android:id="@+id/center_pop_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/marginBottom_confrm_box"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_marginTop="@dimen/marginTop"
        android:background="@drawable/corner_popup" >

      

        <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rl_header_top"
            android:layout_alignParentBottom="true"
            android:background="@drawable/corner_popup" >

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/didider"
                android:background="@drawable/popup_button"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black_popup_btn"
                android:textSize="@dimen/btn_textsize_new_tikcet" />

            <RelativeLayout
                android:id="@+id/didider"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/et_border" >
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/et_border" >
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/didider"
                android:background="@drawable/popup_button"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/black_label"
                android:textSize="@dimen/btn_textsize_new_tikcet" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_green_line_above"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/didider"
                android:background="@color/border_network" >
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_green_line_above"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/didider"
                android:background="@color/green_ok" >
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rl_header_top"
            android:layout_above="@+id/bottom"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/corner_popup" >

            <TextView
               android:id="@+id/confirmation_messsage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/confirm_message"
                android:textColor="@color/black_heading"
                android:gravity="center_horizontal"
                android:textSize="@dimen/btn_textsize_new_tikcet_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                android:background="@color/light_divider_popup" >
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>